--- a/app-gateway/AppGateway/CMakeLists.txt
+++ b/app-gateway/AppGateway/CMakeLists.txt
@@ -35,6 +35,7 @@ message("Setup ${MODULE_NAME} v${MODULE_VERSION}")
 
 find_package(${NAMESPACE}Plugins REQUIRED)
 find_package(${NAMESPACE}Definitions REQUIRED)
+find_package(${NAMESPACE}Core REQUIRED)
 find_package(CompileSettingsDebug CONFIG REQUIRED)
 
 add_library(${MODULE_NAME} SHARED
@@ -42,7 +43,7 @@ add_library(${MODULE_NAME} SHARED
         AppGatewayImplementation.cpp
         AppGatewayResponderImplementation.cpp
         Resolver.cpp
-	Module.cpp)
+        Module.cpp)
 
 # Ensure local helpers and resolutions are on the include path
 target_include_directories(${MODULE_NAME} PRIVATE
@@ -109,7 +110,6 @@ target_link_libraries(${MODULE_NAME}
         CompileSettingsDebug::CompileSettingsDebug
         ${NAMESPACE}Plugins::${NAMESPACE}Plugins
         ${NAMESPACE}Definitions::${NAMESPACE}Definitions
-        # Add common Thunder components explicitly
         ${NAMESPACE}Core::${NAMESPACE}Core
 )
 
@@ -137,24 +137,32 @@ install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/resolutions/resolution.base.json
 write_config(PLUGINS ${PLUGIN_NAME})
 
 # -----------------------------------------------------------------------------
-# l0test target (CloudStore-style minimal harness)
+# appgateway_l0test target (offline, deterministic l0 test binary)
 # -----------------------------------------------------------------------------
 set(L0TEST_NAME appgateway_l0test)
 
-add_executable(${L0TEST_NAME}
-    l0test/AppGatewayTest.cpp
+add_executable(${L0TEST_NAME})
+target_sources(${L0TEST_NAME}
+    PRIVATE
+        l0test/AppGatewayTest.cpp
 )
 
 # Include directories for test build
 target_include_directories(${L0TEST_NAME}
     PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}                 # AppGateway/
-        ${CMAKE_CURRENT_SOURCE_DIR}/..             # app-gateway/ (so <interfaces/...> resolves to local stubs if present)
+        ${CMAKE_CURRENT_SOURCE_DIR}                  # AppGateway/
+        ${CMAKE_CURRENT_SOURCE_DIR}/..              # app-gateway/ (so <interfaces/...> can resolve to local stubs)
         ${CMAKE_CURRENT_SOURCE_DIR}/../helpers
+        ${CMAKE_CURRENT_SOURCE_DIR}/resolutions
         ${CMAKE_CURRENT_SOURCE_DIR}/../interfaces
 )
 
-# Thunder include fallbacks from CMAKE_PREFIX_PATH (if set)
+# Supporting_Files (ContextUtils.h, etc.)
+if(EXISTS ${CMAKE_SOURCE_DIR}/../Supporting_Files)
+    target_include_directories(${L0TEST_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/../Supporting_Files)
+endif()
+
+# Thunder include fallbacks from CMAKE_PREFIX_PATH (if set by invoker)
 if(CMAKE_PREFIX_PATH)
     target_include_directories(${L0TEST_NAME} PRIVATE
         ${CMAKE_PREFIX_PATH}/include
@@ -173,16 +181,27 @@ target_link_libraries(${L0TEST_NAME}
         ${NAMESPACE}Definitions::${NAMESPACE}Definitions
 )
 
-# Define MODULE_NAME for WPEFramework core/core.h usage in the test binary
+# Define MODULE_NAME for WPEFramework logging/core macros in the test binary
 target_compile_definitions(${L0TEST_NAME} PRIVATE MODULE_NAME=AppGateway_L0Test)
 
-# Coverage flags (GCC/Clang)
+# Coverage flags (GCC/Clang) on the test target only
 if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
-    target_compile_options(${L0TEST_NAME} PRIVATE --coverage -O0 -g)
+    target_compile_options(${L0TEST_NAME} PRIVATE -O0 -g --coverage)
     target_link_options(${L0TEST_NAME} PRIVATE --coverage)
 endif()
 
-# Output directory for the test executable (for later lcov consumption)
+# Place the test binary under <build>/AppGateway/appgateway_l0test (matches requested run path)
 set_target_properties(${L0TEST_NAME} PROPERTIES
-    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/appgatewayl0test"
+    CXX_STANDARD 11
+    CXX_STANDARD_REQUIRED YES
+    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/AppGateway"
+)
+
+# Optional convenience target for coverage generation in the build directory:
+#   cmake --build <build> --target appgateway_l0test_coverage
+add_custom_target(appgateway_l0test_coverage
+    COMMAND lcov -c -o coverage.info -d ${CMAKE_BINARY_DIR}
+    COMMAND genhtml -o coverage coverage.info
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    DEPENDS ${L0TEST_NAME}
 )
