--- a/app-gateway/AppGateway/CMakeLists.txt
+++ b/app-gateway/AppGateway/CMakeLists.txt
@@ -148,6 +148,7 @@ target_sources(${L0TEST_NAME}
         l0test/AppGateway_Init_DeinitTests.cpp
         l0test/AppGateway_JsonRpcResolveTests.cpp
         l0test/Resolver_Configure_And_ResolveTests.cpp
+        l0test/Responder_BehaviorTests.cpp
 )
 
 # Include directories for test build
