Checkpoint 64 - cm94bdad97

--- a/tests/l0/appgateway/l0test/CMakeLists.txt
+++ b/tests/l0/appgateway/l0test/CMakeLists.txt
@@ -85,11 +85,10 @@ else()
 endif()
 
 target_include_directories(appgateway_l0test PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}                          # this folder (ServiceMock.h, etc.)
-    ${CMAKE_CURRENT_SOURCE_DIR}/..                      # tests/l0/appgateway (script folder)
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../../../plugin/AppGateway # Plugin sources (for headers)
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../../../helpers      # helpers under app-gateway2
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../../../interfaces   # local interface headers (direct includes)
+    ${CMAKE_CURRENT_SOURCE_DIR}                               # this folder (ServiceMock.h, ContextUtils.h, etc.)
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../../../plugin/AppGateway  # Plugin headers (read-only, no sources copied into tests)
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../../../helpers           # helpers under app-gateway2 (as needed by test harness)
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../../../interfaces        # repo interface stubs
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../../interfaces/json
     ${PREFIX}/include
     ${PREFIX}/include/WPEFramework
